--- a/pages/movieDetail/movieDetail.wxml
+++ b/pages/movieDetail/movieDetail.wxml
@@ -1,11 +1,13 @@
-<!--pages/movieDetail/movieDetail.wxml-->
+<!-- pages/movieDetail/movieDetail.wxml -->
 <view class="movieDetailContainer">
   <image src="{{movie.images.large}}"></image>
   <text class="movie_name">{{movie.original_title}}</text>
   <view class="detail_content">
     <text>评分: {{movie.rating.average}}</text>
     <text>导演: {{movie.directors[0].name}}</text>
-    <text>主演: {{movie.casts[0].name}} {{movie.casts[1].name}} {{movie.casts[2].name}}</text>
+    <text>主演: {{movie.casts.name}} {{movie.casts[1].name}} {{movie.casts[2].name}}</text>
+    <text>时长: {{movie.durations}}</text>
+    <text>类型: {{movie.genres}}</text>
+    <text>上映时间：{{movie.pubdates}}</text>
   </view>
-  <button>我要观影</button>
 </view>
